HM consumer key setting

--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -12,11 +12,13 @@
 </body>
 
 <script>
-  var consumerKey = "rPWfGZv9iELcTSY_PtAi";
-  var url = "https://sandbox-auth.worksmobile.com/oauth/authorize?client_id=" + consumerKey +
-    "&redirect_uri=https://smithground.com/todo" +
-    "&domain=smithground.com";
-
+  // var consumerKey = "rPWfGZv9iELcTSY_PtAi";
+  // var url = "https://sandbox-auth.worksmobile.com/oauth/authorize?client_id=" + consumerKey +
+  //   "&redirect_uri=https://sg-attend-hnnwp.run.goorm.io/todo" +
+  //   "&domain=smithground.com";
+  //
+  // window.open(url, 'authorize', 'width=600px,height=800px');
+  var url = "https://sandbox-auth.worksmobile.com/ba/kr1HVyrVZghvj/service/authorize"
   window.open(url, 'authorize', 'width=600px,height=800px');
 </script>
 
