--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -8,7 +8,9 @@
 
 <body>
   <h1><%= title %></h1>
-  <p>Welcome to <%= title %></p>
+  <p>Welcome to <%= title %>
+    Code : 0253
+  kr1UzZrd1pwMlUxTDlNSkpLaw==</p>
 </body>
 
 <script>
@@ -17,8 +19,9 @@
   // var url = "https://sandbox-auth.worksmobile.com/oauth/authorize?client_id=" + consumerKey +
   //   "&redirect_uri=https://sg-attend-hnnwp.run.goorm.io/todo" +
   //   "&domain=smithground.com";
- var url = "https://auth.worksmobile.com/ba/kr1HVyrVZghvj/service/authorize"
+ var url = "https://auth.worksmobile.com/ba/kr1HVyrVZghvj/service/authorize?client_id=rPWfGZv9iELcTSY_PtAi&redirect_uri=https://sg-attend-hnnwp.run.goorm.io&state=123asda2e&domain=smithground.com"
   window.open(url, 'authorize', 'width=600px,height=800px');
+  console.log(request.query);
 </script>
 
 </html>
